--- a/styles/services.css
+++ b/styles/services.css
@@ -134,67 +134,6 @@ nav.explore-nav{
 
 /* Media Scroller */
 
-.horizontal-media-scroller {
-  --size: 150px;
-  --gap: 2rem;
-
-  display: grid;
-  grid-auto-flow: column;
-  gap: calc(var(--gap) / 2);
-  margin: 0;
-
-  padding-inline-start: var(--gap);
-  padding-inline-end: var(--gap);
-  padding-block-start: calc(var(--gap) / 2);
-  padding-block-end: calc(var(--gap) / 2);
-
-  overflow-x: auto;
-  overscroll-behavior-inline: contain;
-  scroll-snap-type: inline mandatory;
-  scroll-padding-left: var(--gap);
-  scroll-padding-right: var(--gap);
-  scroll-padding-inline: var(--gap);
-}
-@media (prefers-reduced-motion: no-preference) {
-  scroll-behavior: smooth;
-}
-
-.horizontal-media-scroller > li {
-  display: inline-block;
-}
- /*  container padding fix  */
-.horizontal-media-scroller > li:last-of-type figure {
-  position: relative;
-}
-.horizontal-media-scroller > li:last-of-type figure::after {
-  content: "";
-  position: absolute;
-
-  inline-size: var(--gap);
-  block-size: 100%;
-
-  inset-block-start: 0;
-  inset-inline-end: calc(var(--gap) * -1);
-}
-.horizontal-media-scroller > li:last-of-type figure::after figure {
-    scroll-snap-align: start;
-}
-.horizontal-media-scroller > li:last-of-type figure::after figure a {
-    display: inline-block;
-    text-decoration: none;
-    color: inherit;
-    outline-offset: 12px;
-}
-.horizontal-media-scroller > li:last-of-type figure::after figure a:focus {
-      outline-offset: 7px;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  transition: outline-offset .25s ease;
-}
-
-/* Second Media Scroller */
-
 .media-scroller{
   --size-3: 1rem;
   --_spacer: var(--size-3);
@@ -234,7 +173,12 @@ nav.explore-nav{
   inline-size: 100%;
 }
 .media-element > iframe ~ p{
-  margin-top: 0;
+  margin:0;
+}
+
+.media-element > .sub-title{
+  font-size: 1.15rem;
+  padding-left: 0.5rem;
 }
 
 .snaps-inline{
@@ -244,6 +188,15 @@ nav.explore-nav{
 
 .snaps-inline > * {
   scroll-snap-align: start;
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  transition: outline-offset .25s ease;
 }
 
 /* End Media Scroller */
