--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,20 @@
   box-sizing: border-box;
 }
 
+span[class~="sr-only"] {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  white-space: nowrap;
+  position: absolute;
+  padding: 0;
+  margin: -1px;
+}
+
 html {
   font-size: 100%;
 }
