--- a/styles/services.css
+++ b/styles/services.css
@@ -135,6 +135,7 @@ nav.explore-nav{
 /* Media Scroller */
 
 .media-scroller{
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 3px 1px -2px rgba(0,0,0,.2);
   --size-3: 1rem;
   --_spacer: var(--size-3);
   display: grid;
@@ -142,7 +143,7 @@ nav.explore-nav{
   grid-auto-flow: column;
   /* Took out to be able to control width of each card */
   /* grid-auto-columns: 52%; */
-  padding: 0 var(--_spacer) var(--_spacer);
+  padding: var(--_spacer);
   overflow-x: auto;
   overscroll-behavior-inline: contain;
 }
