Navigation updates to services

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,8 @@
   --dark-blue-300: #385876;
   --med-blue: #526fa7;  
   --lt-blue: #93bdea;
-  --gray-100: #EAECEF; 
-  --gray-200: #dee2e6;
+  --grey-100: #EAECEF; 
+  --grey-200: #dee2e6;
   --teal: #45C4B0;
   --purple: #955695;
 
@@ -232,13 +232,13 @@ nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 nav a{
-  width: 100%;
+  width: 40%;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 nav .logo{
@@ -247,12 +247,14 @@ nav .logo{
   background-repeat: no-repeat;
   margin-left: 2rem;
   height: 3.8rem;
-  width: 100%;
+  width: 70%;
 }
 
 nav > ul{
   display: flex;
   align-items: center;
+  justify-content: end;
+  width: 60%;
   padding: 0 0.5rem;
   margin-right: 1rem;
   z-index: 10;
@@ -260,7 +262,7 @@ nav > ul{
 
 nav > ul > li{
   display: flex;
-  color: var(--gray-100);
+  color: var(--grey-100);
   /* color: #f8f9fa; */
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -384,7 +386,7 @@ nav svg.icon{
 /* Hero Carousel */
 section.hero{
   position:relative;
-  background-color: var(--gray-100);
+  background-color: var(--grey-100);
   color: var(--dark-blue);
   margin: 0.7rem 2rem;
   height: 700px;
@@ -472,7 +474,7 @@ img.carousel-img{
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: var(--med-blue);
-  color: var(--gray-100);
+  color: var(--grey-100);
 }
 
 .dot-container{
@@ -620,11 +622,11 @@ footer h3{
 
 footer.grey{
   color: var(--dark-blue);
-  background-color: var(--gray-100);
+  background-color: var(--grey-100);
 }
 
 footer.blue{
-  color: var(--gray-100);
+  color: var(--grey-100);
   background-color: var(--dark-blue);
 }
 
@@ -706,7 +708,7 @@ footer ul{
 
 .testimonial-container{
   color: var(--dark-blue);
-  background-color: var(--gray-200);
+  background-color: var(--grey-200);
   border-radius: 1rem;
   margin: 1.2rem auto;
   padding: 5rem 8rem;
