--- a/styles/services.css
+++ b/styles/services.css
@@ -43,7 +43,7 @@ nav.explore-nav{
 
 .top-blue h1{
   font-size: 2.6rem;
-  color: var(--gray-100);
+  color: var(--grey-100);
   margin: 0 auto;
   padding: 4rem;
   text-align: center;
