--- a/styles/new.css
+++ b/styles/new.css
@@ -236,10 +236,9 @@ nav{
 }
 
 nav a{
-  width: 100%;
+  width: 20%;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 nav .logo{
@@ -248,12 +247,13 @@ nav .logo{
   background-repeat: no-repeat;
   margin-left: 2rem;
   height: 3.8rem;
-  width: 30%;
+  width: 100%;
 }
 
 nav > ul{
   display: flex;
   align-items: center;
+  justify-content: end;
   padding: 0 0.5rem;
   margin-right: 1rem;
   z-index: 10;
@@ -278,6 +278,10 @@ nav > ul > li{
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
   align-items:center;
+}
+
+nav > ul > li > a{
+  width: 100%;
 }
 
 nav > ul > li:hover{
