--- a/styles/main.css
+++ b/styles/main.css
@@ -4,10 +4,10 @@
 :root{
   --grey-100: #EAECEF; 
   --grey-200: #dee2e6;
-  --dark-blue: #1A3651;
-  --dark-blue-300: #385876;
-  --med-blue: #526fa7;  
   --lt-blue: #93bdea;
+  --med-blue: #526fa7;  
+  --dark-blue-300: #385876;
+  --dark-blue-500: #1A3651;
   --teal: #45C4B0;
   --purple: #955695;
 
@@ -58,7 +58,7 @@ body{
 }
 
 body.main{
-  background-color: var(--dark-blue);
+  background-color: var(--dark-blue-500);
   min-height:150vh;
   position: relative;
 }
@@ -68,7 +68,7 @@ h1, h2, h3 ,h4 {
   font-weight: var(--fw-reg);
   font-style: normal;
   line-height: 1.3;
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
 }
 
 h1 {font-size: 3.052rem;}
@@ -119,7 +119,7 @@ img, video {
 }
 
 .open-btn:hover{
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
 }
 
 .close-btn{
@@ -191,7 +191,7 @@ img, video {
 }
 
 .nav-med-blue{
-  background-color: var(--dark-blue);
+  background-color: var(--dark-blue-500);
   width: 95%;
   padding: 2rem;
   position: relative;
@@ -228,11 +228,15 @@ img, video {
 /* End Mobile Nav */
 
 nav{
-  background-color: var(--dark-blue);
+  background-color: var(--grey-100);
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+
+nav.explore-nav{
+  background-color: var(--dark-blue-500);
 }
 
 
@@ -316,10 +320,10 @@ nav svg.icon{
   position: absolute;
   padding: 0.8rem;
   left:0;
-  top: 3rem;
+  top: 2.5rem;
   border-radius: 0.25em;
   background-color: #fff;
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
   width: 10rem;
   visibility: hidden;
@@ -369,7 +373,7 @@ nav svg.icon{
 }
 
 .dropdown{
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   font-family: var(--body-text);
 }
 
@@ -379,7 +383,7 @@ nav svg.icon{
 section.hero{
   position:relative;
   background-color: var(--grey-100);
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   margin: 0.7rem 2rem;
   height: 700px;
   border-radius: 8px;
@@ -486,7 +490,7 @@ img.carousel-img{
 
 /* Add a background color to the active dot/circle */
 .active, .dot:hover {
-  background-color: var(--dark-blue);
+  background-color: var(--dark-blue-500);
 }
 
 button.btn-1{
@@ -554,7 +558,7 @@ button:hover span::before, button:hover span::after{
   font-size: 1.6rem;
   display: flex;
   align-self: flex-end;
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   transition: transform 0.2s ease;
   padding: 0.3rem;
 }
@@ -565,7 +569,7 @@ button:hover span::before, button:hover span::after{
 
 .explore-button svg {
   margin-left: 0.8em;
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
 }
 
 .animation{
@@ -613,13 +617,13 @@ footer h3{
 }
 
 footer.grey{
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   background-color: var(--grey-100);
 }
 
 footer.blue{
   color: var(--grey-100);
-  background-color: var(--dark-blue);
+  background-color: var(--dark-blue-500);
 }
 
 footer span.contact{
@@ -630,7 +634,7 @@ footer span.contact{
 }
 
 footer ul{
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   list-style-type: none;
 }
 
@@ -699,7 +703,7 @@ footer ul{
 /* Testimonials Section */
 
 .testimonial-container{
-  color: var(--dark-blue);
+  color: var(--dark-blue-500);
   background-color: var(--grey-200);
   border-radius: 1rem;
   margin: 1.2rem auto;
