--- a/styles/main.css
+++ b/styles/main.css
@@ -106,6 +106,11 @@ img, video {
   text-align: center;
 }
 
+.dark-blue-500{
+  background-color: var(--dark-blue-500);
+  color: var(--grey-100);
+}
+
 /* End of Global Styling */
 
 /* Mobile Nav */
@@ -239,12 +244,10 @@ nav.explore-nav{
   background-color: var(--dark-blue-500);
 }
 
-
-
 nav .logo{
   margin-left: 2rem;
   padding: 2rem 0;
-  width: 25%;
+  width: 20%;
 }
 
 nav > ul{
@@ -259,7 +262,7 @@ nav > ul{
 
 nav > ul > li{
   display: flex;
-  color: var(--grey-100);
+  color: var(--dark-blue-500);
   text-transform: uppercase;
   letter-spacing: 1px;
   font-family: var(--body-text);
@@ -271,6 +274,10 @@ nav > ul > li{
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
   align-items:center;
+}
+
+nav.dark-blue-500 > ul > li{
+  color: var(--grey-100);
 }
 
 nav > ul > li:hover{
