--- a/styles/main.css
+++ b/styles/main.css
@@ -81,12 +81,16 @@ a {
   color: inherit;
 }
 
-a:visited {
-  /* color: var(--teal); */
-}
+/* a:visited {
+  color: var(--teal);
+} */
 
 a:focus {
   border-bottom: #fff;
+}
+
+body.main :focus-visible{
+  outline: 1px dashed var(--purple);
 }
 
 :focus-visible{
@@ -280,8 +284,13 @@ nav.dark-blue-500 > ul > li{
   color: var(--grey-100);
 }
 
+
 nav > ul > li:hover{
   transform: scale(1.2);
+  color: var(--med-blue);
+}
+
+nav.dark-blue-500 > ul > li:hover{
   color: var(--lt-blue);
 }
 
