--- a/styles/main.css
+++ b/styles/main.css
@@ -25,22 +25,8 @@
   box-sizing: border-box;
 }
 
-span[class~="sr-only"] {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  -webkit-clip-path: inset(50%);
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  white-space: nowrap;
-  position: absolute;
-  padding: 0;
-  margin: -1px;
-}
-
 html {
-  font-size: 100%;
+  font-size: 16px;
 }
 
 body{
@@ -114,6 +100,22 @@ img, video {
   background-color: var(--dark-blue-500);
   color: var(--grey-100);
 }
+
+
+span[class~="sr-only"] {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  white-space: nowrap;
+  position: absolute;
+  padding: 0;
+  margin: -1px;
+}
+
 
 /* End of Global Styling */
 
@@ -808,4 +810,38 @@ footer ul{
     line-height: 1.8rem;
     text-align: justify;
   }
+}
+
+/* Widget Styling */
+.useful-links-widget {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+.useful-links-widget-toggle{
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-color: #333;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.useful-links-widget-links{
+  display: none;
+  position: absolute;
+  bottom: 60px;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #333;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.useful-links-widget-links a{
+  display: block;
+  margin-bottom: 10px;
+  color: #333;
+  text-decoration: none;
 }
