update to carousel

--- a/styles/main.css
+++ b/styles/main.css
@@ -455,6 +455,7 @@ img.carousel-img{
   display: none;
   width: 100%;
   object-fit: cover;
+  border-radius: 18px;
 }
 
 /* Next & previous buttons */
