--- a/styles/main.css
+++ b/styles/main.css
@@ -34,19 +34,9 @@ body{
   font-size: 1.2rem;
   /* font-size: calc(1rem + 0.8vw);  */
   font-family: var(--body-text);
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; */
   margin: 0;
   padding: 0;
   /* max-height:100vh; */
-  /* overflow-x:hidden; */
-}
-
-body.main{
-  background-color: var(--grey-100);
-  position: relative;
 }
 
 h1, h2, h3 ,h4 {
@@ -67,17 +57,6 @@ a {
   color: inherit;
 }
 
-/* a:visited {
-  color: var(--teal);
-} */
-
-a:focus {
-  border-bottom: #fff;
-}
-
-body.main :focus-visible{
-  outline: 1px dashed var(--purple);
-}
 
 :focus-visible{
   outline: 1px dashed var(--teal);
@@ -91,6 +70,24 @@ img, video {
   max-inline-size: 100%;
   block-size: auto;
 }
+
+/* a:visited {
+  color: var(--teal);
+} */
+
+a:focus {
+  border-bottom: #fff;
+}
+
+body.main{
+  background-color: var(--grey-100);
+  position: relative;
+}
+
+body.main :focus-visible{
+  outline: 1px dashed var(--purple);
+}
+
 
 .center{
   text-align: center;
@@ -115,9 +112,7 @@ span[class~="sr-only"] {
   padding: 0;
   margin: -1px;
 }
-
-
-/* End of Global Styling */
+/* End of General Styling */
 
 /* Mobile Nav */
 
@@ -237,6 +232,17 @@ span[class~="sr-only"] {
 }
 
 /* End Mobile Nav */
+
+/* Main Navigation  */
+
+header{
+  width: 100%;
+}
+
+header .wc-logo{
+  padding: 5px;
+  margin-top: 2px;
+}
 
 nav{
   background-color: var(--grey-100);
@@ -604,7 +610,7 @@ button:hover span::before, button:hover span::after{
   /* For mobile phones: */
 
   section.hero{
-    margin: 6rem 2rem;
+    margin: 0rem 2rem;
   }
   button.btn-1 {
     bottom: 1rem;
@@ -706,7 +712,18 @@ footer ul{
 	}
 }
 
+/* Media Queries */
 
+@media only screen and (max-width: 850px){
+  header a{
+    display: flex;
+    justify-content: center;
+  }
+  header .wc-logo{
+    min-width: 200px;
+    width: 25%;
+  }
+}
 
 @media only screen and (max-width: 768px) {
 
