--- a/styles/main.css
+++ b/styles/main.css
@@ -239,6 +239,10 @@ header{
   width: 100%;
 }
 
+header a img{
+  width: 200px;
+}
+
 header .wc-logo{
   padding: 5px;
   margin-top: 2px;
@@ -258,7 +262,7 @@ nav.explore-nav{
 
 nav .logo{
   margin-left: 2rem;
-  padding: 2rem 0;
+  padding: 0;
   width: 20%;
 }
 
@@ -273,7 +277,6 @@ nav > ul{
 }
 
 nav > ul > li{
-  display: flex;
   color: var(--dark-blue-500);
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -282,10 +285,9 @@ nav > ul > li{
   font-weight: 600;
   list-style-type: none;
   padding: 0.5rem;
-  margin: 1rem;
+  margin: 0 1rem 1rem 1rem;
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
-  align-items:center;
 }
 
 nav.dark-blue-500 > ul > li{
@@ -310,7 +312,6 @@ nav svg.icon{
   overflow: visible;
   display: inline-block;
   margin-left: 5px;
-  margin-top: 5px;
   transition: all 0.3s ease-in;
 }
 
