--- a/styles/main.css
+++ b/styles/main.css
@@ -240,12 +240,13 @@ header{
 }
 
 header a img{
-  width: 200px;
+  width: 300px;
 }
 
 header .wc-logo{
   padding: 5px;
   margin-top: 2px;
+  width: 200px;
 }
 
 nav{
@@ -254,6 +255,8 @@ nav{
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  margin-bottom: 2rem;
+  margin-top: 0;
 }
 
 nav.explore-nav{
@@ -272,6 +275,8 @@ nav > ul{
   justify-content: end;
   width: 75%;
   padding: 0 0.5rem;
+  margin-bottom: 0;
+  margin-top: 0.5rem;
   margin-right: 1rem;
   z-index: 10;
 }
