--- a/styles/main.css
+++ b/styles/main.css
@@ -259,10 +259,6 @@ nav{
   margin-top: 0;
 }
 
-nav.explore-nav{
-  background-color: var(--dark-blue-500);
-}
-
 nav .logo{
   margin-left: 2rem;
   padding: 0;
@@ -295,6 +291,10 @@ nav > ul > li{
   cursor: pointer;
 }
 
+nav.dark-blue-500{
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
 nav.dark-blue-500 > ul > li{
   color: var(--grey-100);
 }
@@ -611,6 +611,17 @@ button:hover span::before, button:hover span::after{
   height: 50px;
 }
 
+.weAre{
+  width:100%;
+  display:flex;
+  justify-content: end;
+}
+
+.weAre p {
+  font-size: 2.2rem;
+  margin-right: 3.6rem;
+  color: var(--dark-blue-500);
+}
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
@@ -642,6 +653,8 @@ footer{
   justify-content: space-between;
 }
 
+
+
 footer h3{
   font-size: 1.563rem;;
   margin-top: 0;
@@ -656,6 +669,10 @@ footer.grey{
 footer.blue{
   color: var(--grey-100);
   background-color: var(--dark-blue-500);
+}
+
+footer img{
+  width:200px;
 }
 
 footer span.contact{
