--- a/styles/services.css
+++ b/styles/services.css
@@ -6,7 +6,7 @@ h2{
   font-size: 3rem;
 }
 
-/* Explore page */
+/* What We Do page */
 nav.explore-nav{
   position: sticky;
   top: 0;
@@ -107,16 +107,19 @@ nav.explore-nav{
 /* Video and Audio Section */
 
 
-.video-section{
+.video-section, .design-section{
   max-width: 1440px;
   padding-top: 2rem;
-  margin-left: 3.25rem;
-  margin-right: 3.25rem;
+  /* If we keep content in center */
+  /* margin-left: 3.25rem;
+  margin-right: 3.25rem; */
   position: relative;
   width: 100%;
   display: flex;
+  justify-content: center;
 }
 
+/* need for underline */
 section h2, section h3 {
   position: relative;
 }
@@ -133,33 +136,50 @@ section h2, section h3 {
   transform: skew(-20deg) rotate(var(--rotate)) scaleX(var(--scaleX));
 }
 
-.video-text{
+.video-text {
   width: 40%;
   padding-right: 2rem;
 }
-.video-text h3{
+
+.video-text h3, .design-text h3{
   margin:0;
 }
-.video-text p{
+.video-text p, .design-text p{
   margin-top: 2rem;
   display: block;
   font-size: 1.2rem;
   line-height: 2.0625rem;
 }
 
-.video-image img{
+.video-image img, .design-image img{
   width: 100%;
   border-radius: 18px;
   min-width: 500px;
 }
 
-
 .design-section{
-  padding-top: 1.5rem;
+  padding-top: 5rem;
 }
 
 .design-section h3::before{
   width: 7.8rem;
+}
+
+.design-text {
+  width: 40%;
+  padding-left: 4rem;
+}
+
+button{
+  margin-top:2.5rem;
+  color: var(--grey-100);
+  font-weight: bold;
+  font-size: 1.2rem;
+  border: none;
+  background: rgb(26,54,81);
+  background: linear-gradient(90deg, rgba(26,54,81,1) 0%, rgba(56,88,118,1) 50%, rgba(82,111,167,1) 100%, rgba(147,189,234,1) 100%);
+  padding: 1rem 1.5rem;
+  font-family: var(--body-text);
 }
 
 /* TODO: Media Queries for Explore page */
