--- a/styles/services.css
+++ b/styles/services.css
@@ -180,6 +180,7 @@ button{
   background: linear-gradient(90deg, rgba(26,54,81,1) 0%, rgba(56,88,118,1) 50%, rgba(82,111,167,1) 100%, rgba(147,189,234,1) 100%);
   padding: 1rem 1.5rem;
   font-family: var(--body-text);
+  cursor: pointer;
 }
 
 /* TODO: Media Queries for Explore page */
