--- a/styles/services.css
+++ b/styles/services.css
@@ -170,17 +170,24 @@ section h2, section h3 {
   padding-left: 4rem;
 }
 
-button{
+button.view-more{
+  border-radius: 1rem;
   margin-top:2.5rem;
+  letter-spacing: 1px;
   color: var(--grey-100);
-  font-weight: bold;
   font-size: 1.2rem;
   border: none;
   background: rgb(26,54,81);
   background: linear-gradient(90deg, rgba(26,54,81,1) 0%, rgba(56,88,118,1) 50%, rgba(82,111,167,1) 100%, rgba(147,189,234,1) 100%);
-  padding: 1rem 1.5rem;
+  padding: 1.2rem 1.5rem;
   font-family: var(--body-text);
   cursor: pointer;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.3;
+}
+
+button.view-more:hover{
+  background: linear-gradient(90deg, rgba(147,189,234,1) 0%, rgba(82,111,167,1) 59%);
 }
 
 /* TODO: Media Queries for Explore page */
