--- a/styles/services.css
+++ b/styles/services.css
@@ -177,17 +177,24 @@ button.view-more{
   color: var(--grey-100);
   font-size: 1.2rem;
   border: none;
-  background: rgb(26,54,81);
-  background: linear-gradient(90deg, rgba(26,54,81,1) 0%, rgba(56,88,118,1) 50%, rgba(82,111,167,1) 100%, rgba(147,189,234,1) 100%);
+  /* background-color:var(--dark-blue-500); */
+  background-size: 300% 100%;
+  background-image: linear-gradient(90deg, rgba(26,54,81,1) 0%, rgba(56,88,118,1) 50%, rgba(82,111,167,1) 100%, rgba(147,189,234,1) 100%);
   padding: 1.2rem 1.5rem;
   font-family: var(--body-text);
   cursor: pointer;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: 0.3;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.4s ease;
 }
 
 button.view-more:hover{
-  background: linear-gradient(90deg, rgba(147,189,234,1) 0%, rgba(82,111,167,1) 59%);
+  box-shadow: none;
+  background-position: 100% 0;
+  transition: all 0.4s ease;
+  /* background-color: var(--lt-blue); */
+  /* background-image: linear-gradient(90deg, rgba(147,189,234,1) 0%, rgba(82,111,167,1) 59%); */
 }
 
 /* TODO: Media Queries for Explore page */
