--- a/styles/main.css
+++ b/styles/main.css
@@ -53,7 +53,7 @@ h3 {font-size: 1.953rem;}
 h4 {font-size: 1.563rem;}
 
 a {
-  pointer: cursor;
+  cursor: pointer;
   text-decoration: none;
   color: inherit;
 }
