--- a/styles/services.css
+++ b/styles/services.css
@@ -122,7 +122,9 @@ nav.explore-nav{
   display: flex;
   justify-content: center;
   /* temporary */
-  border: 1px solid red;
+  border: 1px solid #e2e8f0;
+  border-radius: .5rem;
+  padding: 1.5rem;
 }
 .video-section, .design-section{
   max-width: 1440px;
@@ -154,7 +156,9 @@ section h2, section h3 {
 }
 
 .video-text {
-  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-right: 2rem;
 }
 
