--- a/styles/services.css
+++ b/styles/services.css
@@ -121,10 +121,9 @@ nav.explore-nav{
   width: 90%;
   display: flex;
   justify-content: center;
-  /* temporary */
   border: 1px solid #e2e8f0;
   border-radius: .5rem;
-  padding: 1.5rem;
+  padding: 1.75rem;
 }
 .video-section, .design-section{
   max-width: 1440px;
@@ -141,12 +140,13 @@ nav.explore-nav{
 /* need for underline */
 section h2, section h3 {
   position: relative;
+  width: max-content;
 }
 
-.video-section h3::before, .design-section h3::before {
+.video-section-title::before, .design-section-title::before{
   content: "";
   position: absolute;
-  width: 17rem;
+  width: 100%;
   height: 5px;
   transform-origin: bottom;
   background: var(--lt-blue);
@@ -165,6 +165,7 @@ section h2, section h3 {
 .video-text h3, .design-text h3{
   margin:0;
 }
+
 .video-text p, .design-text p{
   margin-top: 2rem;
   display: block;
@@ -173,18 +174,13 @@ section h2, section h3 {
 }
 
 .video-image img, .design-image img{
-  width: 100%;
+  max-width: 100%;
   border-radius: 18px;
   min-width: 500px;
 }
 
-
 .design-section{
   padding-top: 5rem;
-}
-
-.design-section h3::before{
-  width: 7.8rem;
 }
 
 .design-text {
@@ -192,13 +188,15 @@ section h2, section h3 {
   padding-left: 4rem;
 }
 
-button.view-more{
+.view-more{
+  display: block;
+  text-align: center;
+  width: 9rem;
   border-radius: 1rem;
   margin-top:2.5rem;
   letter-spacing: 1px;
   color: var(--grey-100);
   font-size: 1.2rem;
-  border: none;
   /* background-color:var(--dark-blue-500); */
   background-size: 300% 100%;
   background-image: linear-gradient(90deg, rgba(26,54,81,1) 0%, rgba(56,88,118,1) 50%, rgba(82,111,167,1) 100%, rgba(147,189,234,1) 100%);
@@ -212,7 +210,7 @@ button.view-more{
 	transition: all 0.4s ease; */
 }
 
-button.view-more:hover{
+a.view-more:hover{
   transform: translate(0, -5px);
   box-shadow: 9px 9px 4px rgba(78, 93, 120, .32);
   /* box-shadow: none; */
