img alt tag font-style if img is missing

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,9 +67,13 @@ a:active {
   color: var(--teal);
 }
 
+img{
+  font-style: italic;
+}
+
 img, video {
   max-inline-size: 100%;
-  vertical-align:middle;
+  vertical-align: middle;
 }
 
 /* a:visited {
