--- a/styles/main.css
+++ b/styles/main.css
@@ -652,25 +652,12 @@ footer{
   margin-top: 2rem;
   width: 100%;
   padding-top: 2.5rem;
-  padding-left: 2.5rem;
+  padding-bottom: 1.5rem;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
-footer p {
-  color: #fff;
-  font-size: 0.8rem;
-  line-height: 1.4;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-}
-
-footer h3{
-  font-size: 1.563rem;;
-  margin-top: 0;
-  margin-bottom: 0.2rem;
-}
-
+/* Color of background */
 footer.grey{
   color: var(--dark-blue-500);
   background-color: var(--grey-100);
@@ -681,9 +668,48 @@ footer.blue{
   background-color: var(--dark-blue-500);
 }
 
+.footer-text-logo{
+  display: flex;
+  justify-content: space-around;
+  gap: 0.625rem;
+}
+
+.wc-brand{
+  
+}
+
+.footer-text{
+  width: 70%;
+}
+
 footer img{
   width:200px;
 }
+
+footer.blue p {
+  color: var(--grey-100);
+  font-size: 1.2rem;
+  line-height: 1.4;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  padding-right: 3rem;
+}
+
+.footer-navigation{
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer h3{
+  font-size: 1.563rem;
+  margin-top: 0;
+  margin-bottom: 0.2rem;
+}
+
+
 /* 
 footer span.contact{
   letter-spacing: 1px;
@@ -695,11 +721,20 @@ footer span.contact{
 footer ul.footer-navigation li{
   margin: 0 0 0.5em;
   font-family: "Open Sans", arial, sans-serif;
-  font-size: 0.8em;
+  font-size: 1rem;
   display: inline-block;
   padding: 0px 1em;
-  border-right: 1px solid #FFF;
+  border-right: 1px solid var(--grey-100);
   list-style: none;
+  transition: all 0.2s ease-in;
+}
+
+footer ul.footer-navigation li:last-child{
+  border-right: none;
+}
+
+footer ul.footer-navigation li:hover{
+  color: var(--lt-blue);
 }
 
 .footer-right{
