--- a/styles/main.css
+++ b/styles/main.css
@@ -651,7 +651,7 @@ button:hover span::before, button:hover span::after{
 footer{
   margin-top: 2rem;
   width: 100%;
-  padding-top: 2.5rem;
+  padding-top: 3rem;
   padding-bottom: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -674,16 +674,15 @@ footer.blue{
   gap: 0.625rem;
 }
 
+.footer-text-logo img{
+  width:200px;
+}
 
 .footer-text{
   width: 70%;
 }
 
-footer img{
-  width:200px;
-}
-
-footer.blue p {
+.footer-text p {
   color: var(--grey-100);
   font-size: 1.2rem;
   line-height: 1.4;
@@ -692,6 +691,8 @@ footer.blue p {
   text-align: center;
   padding-right: 3rem;
 }
+
+
 
 hr.lt-blue{
   border-top: 1px solid var(--lt-blue);
@@ -704,21 +705,6 @@ hr.lt-blue{
   justify-content: center;
   align-items: center;
 }
-
-/* footer h3{
-  font-size: 1.563rem;
-  margin-top: 0;
-  margin-bottom: 0.2rem;
-} */
-
-
-/* 
-footer span.contact{
-  letter-spacing: 1px;
-  font-size: 1.2rem;
-  font-family: var(--body-text);
-  padding-left: 0.8rem;
-} */
 
 footer ul.footer-navigation li{
   margin: 0 0 0.5em;
@@ -735,52 +721,15 @@ footer ul.footer-navigation li:last-child{
   border-right: none;
 }
 
-footer ul.footer-navigation li:hover, .footer-text a:hover{
+.footer-text a:hover, footer ul.footer-navigation li:hover{
   color: var(--lt-blue);
 }
 
-.footer-right{
-  margin-left: 2.5rem;
-  margin-right: 2rem;
-}
 
-.footer-right > .menu-nav{
-  margin-right: 4rem;
-  display: flex;
-  width: 50%;
-  gap: 1rem;
-}
+/* Animation - keyframes */
 
-.footer-right > .menu-nav li{
-  font-size: calc(1.0rem + 0.5vw);
-  position:relative;
-  display: inline-block;
-  transition: scale 0.2ms ease-in;
-}
+/* Fade-in animation for underline used in navigation */
 
-.footer-right > .menu-nav li:hover::after{
-  --link-color: 102, 153, 255;
-  content:"";
-  display:block;
-  position: absolute;
-  width: 100%;
-  height: 0.3rem;
-	bottom: -0.5rem;
-  /* Gradient */
-  background-image: linear-gradient(
-		to right,
-		transparent 0%,
-		rgba(var(--link-color), .6) 30%,
-		rgba(var(--link-color), .7) 50%,
-		rgba(var(--link-color), .6) 70%,
-		transparent 100%
-	);
-  /* Set-up fade-in animation */
-	opacity: 0;
-	animation: fadeUnderlineIn 400ms ease-out forwards;
-}
-
-/* Fade-in animation */
 @keyframes fadeUnderlineIn {
 	100% {
 		opacity: 1;
@@ -809,7 +758,6 @@ footer ul.footer-navigation li:hover, .footer-text a:hover{
     gap: 0.5rem;
   }
 }
-
 
 
 /* Testimonials Section */
