--- a/styles/main.css
+++ b/styles/main.css
@@ -213,7 +213,6 @@ span[class~="sr-only"] {
   transition-delay: 0.4s;
 }
 
-
 .list {
   list-style-type: none;
   padding: 0;
@@ -262,12 +261,14 @@ nav{
   width: 100%;
   margin-bottom: 2rem;
   margin-top: 0;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
 }
 
 nav .logo{
   margin-left: 2rem;
   padding: 0;
-  width: 20%;
+  width: 23%;
 }
 
 nav > ul{
@@ -275,7 +276,7 @@ nav > ul{
   align-items: center;
   justify-content: end;
   width: 75%;
-  padding: 0 0.5rem;
+  padding: 0 1rem 0 0.5rem;
   margin-bottom: 0;
   margin-top: 0.5rem;
   margin-right: 1rem;
@@ -291,7 +292,7 @@ nav > ul > li{
   font-weight: 600;
   list-style-type: none;
   padding: 0.5rem;
-  margin: 0 1rem 1rem 1rem;
+  margin: 1rem;
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
 }
@@ -691,8 +692,6 @@ footer.blue{
   text-align: center;
   padding-right: 3rem;
 }
-
-
 
 hr.lt-blue{
   border-top: 1px solid var(--lt-blue);
