Additional color variables added

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,12 @@
   --dark-blue-500: #1A3651;
   --teal: #45C4B0;
   --purple: #955695;
+  --red: #E94F37;
+  --orange-100: #F19A3E;
+  --orange-300: #DD6031;
+  --yellow: #F9DB6D;
+
+
 
   --body-text: "Barlow Semi Condensed", sans-serif;
   --heading-text: "chainprinter", sans-serif;
