Additional color variables added

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@
   --dark-blue-300: #385876;
   --dark-blue-500: #1A3651;
   --teal: #45C4B0;
+  --green: #317B22;
   --purple: #955695;
   --red: #E94F37;
   --orange-100: #F19A3E;
