--- a/styles/services.css
+++ b/styles/services.css
@@ -130,6 +130,7 @@ section{
   max-width: 1100px;
   display: flex;
   justify-content: center;
+  flex-flow: row wrap;
   border: 1px solid #e2e8f0;
   border-radius: .5rem;
   padding: 1.75rem 2rem;
@@ -164,6 +165,7 @@ section h3.service-card-title {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  flex: 1;
 }
 
 .service-card-text h3{
@@ -230,11 +232,13 @@ a.view-more:hover{
     width: 100px;
     height: 50px;
   }
+  .service-card-title{
+    display:flex;
+    align-self: center;
+  }
+
   .video-section h2 {
     font-size: 1.953rem;
-  }
-  .video-section h3 {
-    font-size: 1.563rem;
   }
   .video-section h2::before {
     width: 16rem;
