--- a/styles/services.css
+++ b/styles/services.css
@@ -127,13 +127,13 @@ section{
 
 .service-card{
   width: 100%;
-  max-width: 1100px;
+  max-width: 1200px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
   border: 1px solid #e2e8f0;
   border-radius: .5rem;
-  padding: 1.75rem 2rem;
+  padding: 2rem 2.5rem;
   gap: 2rem;
   margin: 1rem;
 }
@@ -175,7 +175,8 @@ section h3.service-card-title {
 .service-card-text p {
   display: block;
   font-size: 1.2rem;
-  line-height: 2.0625rem;
+  line-height: 1.8rem;
+  padding: 1rem 0;
 }
 
 .service-image img{
