--- a/styles/main.css
+++ b/styles/main.css
@@ -299,11 +299,11 @@ nav > ul{
   padding: 0 1rem 0 0.5rem;
   margin-bottom: 0;
   margin-top: 0.5rem;
-  margin-right: 1rem;
+  margin-right: 1.5rem;
   z-index: 10;
 }
 
-nav > ul > li{
+nav > ul > li, .nav-list-item{
   color: var(--dark-blue-500);
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -312,7 +312,7 @@ nav > ul > li{
   font-weight: 600;
   list-style-type: none;
   padding: 0.5rem;
-  margin: 1rem;
+  margin: 1rem 0.7rem;
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
 }
@@ -440,7 +440,7 @@ section.hero{
   position:relative;
   background-color: var(--grey-100);
   color: var(--dark-blue-500);
-  margin: 0.7rem 4rem;
+  margin: 0.7rem 6rem;
   height: 700px;
   display: flex;
   align-items: center;
