--- a/styles/main.css
+++ b/styles/main.css
@@ -296,7 +296,7 @@ nav > ul{
   align-items: center;
   justify-content: end;
   width: 75%;
-  padding: 0 1rem 0 0.5rem;
+  padding: 0 0 0 0.5rem;
   margin-bottom: 0;
   margin-top: 0.5rem;
   margin-right: 1.5rem;
@@ -312,7 +312,7 @@ nav > ul > li, .nav-list-item{
   font-size: 1.2rem;
   font-weight: 600;
   list-style-type: none;
-  padding: 0.5rem;
+  padding: 0.5rem 0.7rem;
   margin: 1rem 0.25rem;
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
