--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -223,10 +223,18 @@ nav.explore-nav{
   width: 100%;
 }
 
+.before-section, .after-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .before-image, .after-image{
   width: 100%;
-  height: auto;
-  max-width: 450px;
+  /* height: auto; */
+  /* max-width: 450px; */
 }
 
 .divider{
