--- a/styles/main.css
+++ b/styles/main.css
@@ -279,11 +279,12 @@ nav{
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-bottom: 2rem;
-  margin-top: 0;
   padding-top: 2rem;
   padding-bottom: 1rem;
+  padding-right: 1rem;
 }
+
+
 
 nav .logo{
   margin-left: 2rem;
