--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -231,6 +231,19 @@ nav.explore-nav{
 }
 
 
+.before-section-horizontal, .after-section-horizontal{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.before-section-horizontal{
+  width:30%;
+}
+.after-section-horizontal{
+  width: 45%;
+}
+
 h3.before-title{
   color: var(--red);
   font-size: 1.563rem;
@@ -250,15 +263,23 @@ h3.after-title{
   /* max-width: 450px; */
 }
 
+/* TODO:adjust size and padding */
+
 .divider{
   display: inline-flex;
   align-self: center;
   border-left: 2px solid var(--grey-200);
   height: 550px;
   margin: 0 1rem;
-
 }
 
+.divider-horizontal{
+  display: inline-flex;
+  align-self: center;
+  border-left: 2px solid var(--grey-200);
+  height: 350px;
+  margin: 0 1rem;
+}
 
 
 /* TODO: Media Queries for Explore page */
