--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -140,7 +140,7 @@ nav.explore-nav{
 /* Media Scroller */
 
 .media-scroller{
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 3px 1px -2px rgba(0,0,0,.2);
+  /* box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 3px 1px -2px rgba(0,0,0,.2); */
   --size-3: 1rem;
   --_spacer: var(--size-3);
   display: grid;
