--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -212,7 +212,8 @@ svg.chevron-left{
   display: grid;
   grid-template-rows: min-content;
   gap: var(--_spacer);
-  padding: 0 0 1rem 0;
+  margin: 0 0 1rem 0;
+  padding: 0 0 1.7rem 0;
   background: var(--dark-blue-500);
   color: var(--grey-100);
   border-radius: 5px;
@@ -232,6 +233,8 @@ svg.chevron-left{
   object-fit: cover;
   width: 100%;
   min-height: 100%;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 /* 
 .media-element > iframe {
