--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -211,15 +211,15 @@ svg.chevron-left{
   --shadow-strength: 10%;
   display: grid;
   grid-template-rows: min-content;
+  /* grid-auto-columns: 100%; */
   gap: var(--_spacer);
   margin: 0 0 1rem 0;
   padding: 0 0 1.7rem 0;
   background: var(--dark-blue-500);
   color: var(--grey-100);
-  border-radius: 5px;
+  border-radius: 24px;
   box-shadow: 0 3px 5px -2px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 3%)),0 7px 14px -5px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 5%));
   max-width: 615px;
-  /* Must have for video or bring grid-auto-columns: 52%; back in on main element */
   min-width: 615px;
 }
 
@@ -230,11 +230,15 @@ svg.chevron-left{
 }
 
 .media-element > iframe{
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
-  min-height: 100%;
-  border-bottom-left-radius: 8px;
+  aspect-ratio: 16 /9;
+  /* min-height: 100%; */
+  border-radius: 16px;
+  /* border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 16px; */
 }
 /* 
 .media-element > iframe {
@@ -328,7 +332,8 @@ h3.after-title{
 .before-image, .after-image{
   width: 100%;
   /* height: auto; */
-  /* max-width: 450px; */
+  max-width: 85%;
+  
 }
 
 /* TODO:adjust size and padding */
