--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -221,6 +221,7 @@ svg.chevron-left{
   box-shadow: 0 3px 5px -2px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 3%)),0 7px 14px -5px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 5%));
   max-width: 615px;
   min-width: 615px;
+  z-index:1;
 }
 
 .media-element > img {
