--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -227,7 +227,7 @@ svg.chevron-left{
   box-shadow: 0 3px 5px -2px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 3%)),0 7px 14px -5px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 5%));
   max-width: 615px;
   min-width: 615px;
-  z-index:1;
+  z-index:10;
   overflow:hidden;
 }
 
@@ -247,6 +247,10 @@ svg.chevron-left{
   border-bottom-right-radius: 8px;
   border-top-left-radius: 10px;
   border-top-right-radius: 16px; */
+}
+
+.media-element> iframe::after{
+  border-radius: 16px;
 }
 /* 
 .media-element > iframe {
