--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -250,21 +250,39 @@ svg.chevron-left{
   border-top-right-radius: 16px; */
 }
 
-.media-element> iframe::after{
-  border-radius: 16px;
+
+.iframe-wrapper {
+  position: relative;
+  aspect-ratio: 16 / 9;
+
+  &::before {    
+    content: "";
+    position: absolute;
+    inset: 5px;
+    z-index: -1;
+    background: #000;
+    filter: blur(10px);
+    opacity: .75;
+  }
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    clip-path: inset(0% 0% 0% 0% round 10px);
+  }
 }
-/* 
-.media-element > iframe {
-  inline-size: 100%;
-  aspect-ratio: 16 /9;
-  object-fit: cover;
-} */
+
+
 .media-element > iframe ~ p{
   margin:0;
 }
 
 .media-element p{
   padding-left: 1rem;
+  margin: 0;
 }
 
 .media-element > .sub-title{
